# rainbow

./: .coderabbit.yaml  .dockerignore  .env.consumer.template  .env.template  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Eunomia.code-workspace  Makefile  README.md  diesel.toml  rustfmt.toml
rainbow-auth/: Cargo.toml
rainbow-auth/openapi/: auth_consumer.json  auth_provider.json
rainbow-auth/src/: lib.rs  main.rs
rainbow-auth/src/setup/: consumer.rs  consumer_router.rs  mod.rs  provider.rs  provider_router.rs  xx_provider.rs
rainbow-auth/src/ssi/: mod.rs
rainbow-auth/src/ssi_auth/: mod.rs
rainbow-auth/test-data/: fake_cert.pem  fake_key.pem  private_key.pem  public_key.pem
rainbow-auth/tests/: test_cmd.rs  test_common_errors.rs  test_common_types_entities.rs  test_common_types_gnap_grant_request.rs  test_common_types_gnap_grant_response.rs  test_common_utils.rs  test_consumer_core_impl_wallet_trait_impl.rs  test_consumer_core_impls_consumer_trait_impl.rs  test_consumer_core_mod.rs  test_consumer_http_mod.rs  test_consumer_http_openapi.rs  test_consumer_setup_app.rs  test_consumer_setup_db_migrations.rs  test_provider_core_impl_provider_trait_impl.rs  test_provider_core_impl_wallet_trait_impl.rs  test_provider_core_mod.rs  test_provider_http_mod.rs  test_provider_http_openapi.rs  test_provider_setup_app.rs  test_provider_setup_db_migrations.rs
rainbow-authority/: .env.authority.template  Cargo.toml
rainbow-authority/src/: lib.rs  main.rs
rainbow-authority/src/config/: config.rs  config_trait.rs  mod.rs
rainbow-authority/src/core/: authority.rs  authority_trait.rs  mod.rs
rainbow-authority/src/data/: into_active_trait.rs  mod.rs
rainbow-authority/src/errors/: error_adapter.rs  error_log_trait.rs  errors.rs  helpers.rs  mod.rs
rainbow-authority/src/http/: core_router.rs  gatekeeper_router.rs  issuer_router.rs  mod.rs  openapi.rs  router.rs  vcs_router.rs  verifier_router.rs  wallet_router.rs
rainbow-authority/src/http_xxx/: mod.rs  openapi.rs
rainbow-authority/src/services/: mod.rs
rainbow-authority/src/setup/: application.rs  cmd.rs  config.rs  db_migrations.rs  mod.rs
rainbow-authority/src/static/: dp_vc.json  ic_vc.json  mod.rs  vpd.json
rainbow-authority/src/types/: mod.rs
rainbow-authority/src/types_xxx/: mod.rs
rainbow-authority/src/utils/: mod.rs
rainbow-business-gateway/: .env.gateway.provider.template  .env.provider  Cargo.toml
rainbow-business-gateway/src/: lib.rs  main.rs
rainbow-business-gateway/src/cmd/: cmd.rs
rainbow-business-gateway/src/gateway/: mod.rs
rainbow-catalog/: .env.catalog.template  Cargo.toml
rainbow-catalog-agent/: Cargo.toml  build.rs
rainbow-catalog-agent/proto/: catalog_models.proto  catalog_service.proto
rainbow-catalog-agent/src/: lib.rs  main.rs
rainbow-catalog-agent/src/cache/: factory_redis.rs  factory_trait.rs  mod.rs
rainbow-catalog-agent/src/data/: factory_sql.rs  factory_trait.rs  mod.rs
rainbow-catalog-agent/src/entities/: common.rs  mod.rs
rainbow-catalog-agent/src/grpc/: mappers.rs  mod.rs
rainbow-catalog-agent/src/http/: mod.rs
rainbow-catalog-agent/src/protocols/: mod.rs  (+1 more)
rainbow-catalog/openapi/: catalog_provider.json
rainbow-catalog/src/: lib.rs  main.rs
rainbow-common/: Cargo.toml
rainbow-common/src/: batch_requests.rs  dcat_formats.rs  formats.rs  forwarding.rs  lib.rs  misc_router.rs  opt_urn_serde.rs  transfer_comm.rs  urn_serde.rs  utils.rs
rainbow-connector/: Cargo.toml
rainbow-connector/src/: lib.rs
rainbow-contracts/: .env.contracts.consumer.template  .env.contracts.provider.template  .env.contracts.template  Cargo.toml
rainbow-contracts/openapi/: contracts_consumer.json  contracts_provider.json
rainbow-contracts/src/: lib.rs  main.rs
rainbow-core/: .env.consumer.template  .env.core.consumer.template  .env.core.provider.template  .env.provider  .env.provider.template  Cargo.toml
rainbow-core/src/: lib.rs  main.rs
rainbow-core/tests/: generic_testing_case.rs  mod.rs  protocol_ctp_transition_completed_stage.rs  protocol_ctp_transition_requested_stage.rs  protocol_ctp_transition_started_stage.rs  protocol_ctp_transition_suspended_stage.rs  protocol_ctp_transition_terminated_stage.rs  transfer_pull_full_case.rs  transfer_push_full_case.rs  utils.rs
rainbow-datahub-catalog/: .env.datahub_catalog.template  Cargo.toml
rainbow-datahub-catalog/openapi/: datahub_catalog_provider.json
rainbow-datahub-catalog/src/: lib.rs  main.rs
rainbow-dataplane/: Cargo.toml
rainbow-dataplane/src/: core.rs  data_plane_peer.rs  lib.rs  main.rs
rainbow-db/: Cargo.toml
rainbow-db/src/: lib.rs
rainbow-events/: Cargo.toml
rainbow-events/src/: lib.rs
rainbow-fe-gateway/: .env.gateway.consumer  .env.gateway.consumer.template  .env.gateway.provider.template  .env.provider  Cargo.toml
rainbow-fe-gateway/src/: lib.rs  main.rs
rainbow-mates/: Cargo.toml  cargo.toml
rainbow-mates/src/: lib.rs
rainbow-negotiation-agent/: Cargo.toml  build.rs
rainbow-negotiation-agent/proto/: agreement.proto  models.proto  negotiation-message.proto  negotiation-process.proto  offer.proto
rainbow-negotiation-agent/src/: lib.rs  main.rs
rainbow-tests/: Cargo.toml
rainbow-tests/tests/: contract_negotiation_consumer.rs  contract_negotiation_consumer_id.rs  contract_negotiation_provider.rs  generic_testing_case.rs  mod.rs  protocol_ctp_transition_completed_stage.rs  protocol_ctp_transition_requested_stage.rs  protocol_ctp_transition_started_stage.rs  protocol_ctp_transition_suspended_stage.rs  protocol_ctp_transition_terminated_stage.rs  transfer_pull_full_case.rs  transfer_pull_provider_case.rs  transfer_push_full_case.rs  transfer_rpc_pull.rs  utils.rs
rainbow-transfer/: .env.transfer.provider.template  Cargo.toml  build.rs
rainbow-transfer/openapi/: transfer_consumer.json  transfer_provider.json
rainbow-transfer/src/: lib.rs  main.rs
rainbow-transfer/tests/: mod.rs  protocol_ctp_transition_completed_stage.rs  protocol_ctp_transition_started_stage.rs  protocol_ctp_transition_suspended_stage.rs  transfer_pull_full_case.rs  transfer_push_full_case.rs
(+3492 files in other folders)
