# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "rainbow-core",
    "rainbow-catalog",
    "rainbow-contracts",
    "rainbow-dataplane",
    "rainbow-transfer",
    "rainbow-common",
]
exclude = [
    "static",
    "gui",
    "deployment"
]
resolver = "2"


[workspace.dependencies]
serde = { version = "1.0.203", features = ["default", "derive"] }
serde_json = { version = "1.0.117", features = ["default"] }
clap = { version = "4.4.9", features = [
    "env",
    "derive",
    "wrap_help",
    "unicode",
] }
tokio = { version = "1.35.0", features = ["full"] }
anyhow = "1.0.80"
tracing = "0.1"
tracing-subscriber = "0.3.0"
axum = { version = "0.7.5" }
tower-http = { version = "0.5.2", features = ["trace", "cors"] }
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json"] }
once_cell = "1.19.0"
thiserror = "1.0.61"
jsonschema = "0.18.0"
chrono = { version = "0.4.38", features = ["serde"] }
ulid = "1.1.3"
uuid = { version = "1.8.0", features = ["serde", "default", "v4"] }
log = "0.4.21"
tower = "0.4.13"
http-body-util = "0.1.2"
tracing-test = "0.2.5"
utoipa = { version = "5.1.3" }
utoipa-axum = "0.1.2"
utoipa-redoc = { version = "5.0.0", features = ["axum"] }
sea-orm = { version = "1.1.1", features = ["sqlx-postgres", "runtime-tokio", "macros", "with-json"] }
sea-orm-migration = { version = "1.1.1" }

