# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "rainbow-core",
    "rainbow-catalog",
    "rainbow-contracts",
    "rainbow-dataplane",
    "rainbow-transfer",
    "rainbow-common",
    "rainbow-auth",
    "rainbow-db",
    "rainbow-tests",
    "rainbow-events",
    "rainbow-proxy-http",
    "rainbow-proxy-kafka",
    "rainbow-proxy-nifi",
    "rainbow-fe-gateway",
    "rainbow-datahub-catalog",
    "rainbow-mates", "rainbow-business-gateway",
]
exclude = [
    "static",
    "gui",
    "deployment"
]
resolver = "2"


[workspace.dependencies]
serde = { version = "1.0.203", features = ["default", "derive"] }
serde_json = { version = "1.0.117", features = ["default"] }
clap = { version = "4.4.9", features = [
    "env",
    "derive",
    "wrap_help",
    "unicode",
] }
base64 = "0.22.1"
tokio = { version = "1.35.0", features = ["full"] }
anyhow = "1.0.80"
tracing = "0.1"
tracing-subscriber = "0.3.0"
axum = { version = "0.7.5", features = ["ws"] }
tower-http = { version = "0.6.2", features = ["trace", "cors"] }
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json"] }
once_cell = "1.19.0"
thiserror = "2.0.12"
jsonschema = "0.29.0"
chrono = { version = "0.4.38", features = ["serde"] }
ulid = "1.1.3"
uuid = { version = "1.8.0", features = ["serde", "default", "v4"] }
urn = { version = "0.7.0", features = ["serde"] }
log = "0.4.21"
tower = "0.5.2"
http-body-util = "0.1.2"
tracing-test = "0.2.5"
sea-orm = { version = "1.1.1", features = ["sqlx-postgres", "sqlx-sqlite", "runtime-tokio", "macros", "with-json"] }
sea-orm-migration = { version = "1.1.1" }
json_to_table = "0.10.0"
mockall = "0.13.1"
serde_valid = { version = "1.0.5", features = ["default"] }
url = { version = "2.5.4", features = ["default"] }
urlencoding = { version = "2.1.3" }
