# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "rainbow-monolith",
    "rainbow-dataplane",
    "rainbow-common",
    "rainbow-auth",
    "rainbow-events",
    "rainbow-fe-gateway",
    "rainbow-business-gateway",
    "rainbow-catalog-agent",
    "rainbow-negotiation-agent",
    "rainbow-transfer-agent", "rainbow-connector",
]
exclude = [
    "static",
    "gui",
    "deployment"
]
resolver = "2"


[workspace.dependencies]
serde = { version = "1.0.203", features = ["default", "derive"] }
serde_json = { version = "1.0.117", features = ["default"] }
clap = { version = "4.4.9", features = [
    "env",
    "derive",
    "wrap_help",
    "unicode",
] }
base64 = "0.22.1"
tokio = { version = "1.35.0", features = ["full"] }
anyhow = { version = "1.0.80", features = ["backtrace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.8.8", features = ["ws"] }
tower-http = { version = "0.6.2", features = ["trace", "cors", "fs"] }
dotenvy = "0.15"
reqwest = { version = "0.13.1", features = ["json"] }
once_cell = "1.19.0"
thiserror = "2.0.12"
jsonschema = "0.40.0"
chrono = { version = "0.4.38", features = ["serde"] }
uuid = { version = "1.8.0", features = ["serde", "default", "v4", "v5"] }
urn = { version = "0.7.0", features = ["serde"] }
log = "0.4.21"
tower = "0.5.2"
http-body-util = "0.1.2"
sea-orm = { version = "1.1.1", features = ["sqlx-postgres", "sqlx-sqlite", "runtime-tokio", "macros", "with-json", "serde_json"] }
sea-orm-migration = { version = "1.1.1" }
json_to_table = "0.12.0"
mockall = "0.14.0"
url = { version = "2.5.4", features = ["default"] }
urlencoding = { version = "2.1.3" }
sha2 = "0.10.9"
rand = "0.9.2"
jsonwebtoken = "10.3.0"
serde_norway = "0.9.42"
derive_builder = "0.20.2"
rustls = { version = "0.23", features = ["ring"] }
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
async-trait = "0.1.89"
ymir = { path = "./../ymir" }
#ymir = {git = "https://github.com/EunomiaUPM/ymir.git", tag = "v0.3.4"}
