[package]
name = "rainbow_auth"
version = "0.3.1"
edition = "2021"



[lib]
name = "rainbow_auth"
path = "src/lib.rs"

[[bin]]
name = "rainbow_auth"
path = "src/main.rs"

[dependencies]
rainbow_common = { version = "0.3.1", path = "../rainbow-common", default-features = true }
rainbow_db = { version = "0.3.1", path = "../rainbow-db", default-features = true }

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
anyhow = { workspace = true }
base64 = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sea-orm = { workspace = true }
rand = { workspace = true }
urlencoding = { workspace = true }
jsonwebtoken = { workspace = true }
sha2 = { workspace = true }
json_to_table = { workspace = true }
url = { workspace = true }
clap = { workspace = true }
dotenvy = { workspace = true }
sea-orm-migration = { workspace = true }
tracing-subscriber = { workspace = true }
tower-http = { workspace = true }
once_cell = { workspace = true }
