[package]
name = "rainbow_authority"
version = "0.3.1"
edition = "2021"

[lib]
name = "rainbow_authority"
path = "src/lib.rs"

[[bin]]
name = "rainbow_authority"
path = "src/main.rs"

[dependencies]
rainbow_common = { version = "0.3.1", path = "../rainbow-common", default-features = false }

serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
dotenvy = { workspace = true }
reqwest = { workspace = true }
once_cell = { workspace = true }
thiserror = { workspace = true }
jsonschema = { workspace = true }
chrono = { workspace = true }
urn = { workspace = true }
uuid = { workspace = true }
log = { workspace = true }
tracing-test = { workspace = true }
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
json_to_table = { workspace = true }
mockall = { workspace = true }
url = { workspace = true }