[package]
name = "rainbow_authority"
version = "0.3.1"
edition = "2021"

[lib]
name = "rainbow_authority"
path = "src/lib.rs"

[[bin]]
name = "rainbow_authority"
path = "src/main.rs"

[dependencies]
# rainbow_common = { version = "0.1.0", path = "../rainbow-common", default-features = false }

serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
dotenvy = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
json_to_table = { workspace = true }
base64 = { workspace = true }
jsonwebtoken = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
urlencoding = { workspace = true }
tower-http = { workspace = true }
rsa = "0.9.8"
x509-parser = "0.18.0"
once_cell = "1.21.3"