[package]
name = "rainbow_business_gateway"
version = "0.1.0"
edition = "2021"

[lib]
name = "rainbow_business_gateway"
path = "src/lib.rs"

[[bin]]
name = "rainbow_business_gateway"
path = "src/main.rs"

[dependencies]
rainbow_common = { version = "0.1.0", path = "../rainbow-common", default-features = false }
rainbow_db = { version = "0.1.0", path = "../rainbow-db", default-features = false }

serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
urn = { workspace = true }
json_to_table = { workspace = true }
url = { workspace = true }
tower-http = "0.6.2"