[package]
name = "rainbow_business_gateway"
version = "0.3.8"
edition = "2021"

[lib]
name = "rainbow_business_gateway"
path = "src/lib.rs"

[[bin]]
name = "rainbow_business_gateway"
path = "src/main.rs"

[dependencies]
rainbow_common = { version = "0.3.8", path = "../rainbow-common", default-features = false }

serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
urn = { workspace = true }
tower-http = { workspace = true }
fs_extra = { version = "1.3.0" }
mime_guess = "2.0"
rust-embed = "8.3"
async-trait = {workspace = true}