[package]
name = "rainbow-catalog"
version = "0.1.0"
edition = "2021"

#[lib]
#name = "rainbow_contracts"
#path = "src/.rs"

[[bin]]
name = "rainbow_catalog"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
diesel = { workspace = true }
diesel_migrations = { workspace = true }
dotenvy = { workspace = true }
reqwest = { workspace = true }
once_cell = { workspace = true }
thiserror = { workspace = true }
jsonschema = { workspace = true }
chrono = { workspace = true }
ulid = { workspace = true }
uuid = { workspace = true }
log = { workspace = true }
tower = { workspace = true }
http-body-util = { workspace = true }
tracing-test = { workspace = true }
duckdb = { workspace = true }
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
utoipa-redoc = { workspace = true }

