[package]
name = "rainbow_catalog"
version = "0.1.0"
edition = "2021"

[lib]
name = "rainbow_catalog"
path = "src/lib.rs"

[[bin]]
name = "rainbow_catalog"
path = "src/main.rs"

[dependencies]
rainbow_common = { version = "0.1.0", path = "../rainbow-common", default-features = true }
rainbow_db = { version = "0.1.0", path = "../rainbow-db", default-features = true }

serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
dotenvy = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
urn = { workspace = true }
log = { workspace = true }
tower = { workspace = true }
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }