[package]
name = "rainbow_catalog"
version = "0.3.1"
edition = "2021"

[lib]
name = "rainbow_catalog"
path = "src/lib.rs"

[[bin]]
name = "rainbow_catalog"
path = "src/main.rs"

[dependencies]
rainbow_common = { version = "0.3.1", path = "../rainbow-common", default-features = true }
rainbow_db = { version = "0.3.1", path = "../rainbow-db", default-features = true }
rainbow_events = { version = "0.3.1", path = "../rainbow-events", default-features = true }

serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
urn = { workspace = true }
log = { workspace = true }
tower = { workspace = true }
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
once_cell = "1.20.2"
json_to_table = { workspace = true }
mockall = { workspace = true }