[package]
name = "rainbow_common"
version = "0.3.8"
edition = "2021"

[lib]
name = "rainbow_common"
path = "src/lib.rs"


[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
dotenvy = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
thiserror = { workspace = true }
jsonschema = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
urn = { workspace = true }
sea-orm = { workspace = true }
rand = "0.8.5"
mockall = { workspace = true }
json_to_table = { workspace = true }
async-trait = {workspace = true}
tokio = { workspace = true }
bytes = "1.10.1"
serde_urlencoded = "0.7.1"
serde_norway = { workspace = true }
ymir = { workspace = true }
#ymir = { path = "./../../ymir" }
#ymir = {git = "https://github.com/EunomiaUPM/ymir.git", tag = "v0.3.0"}