[package]
name = "rainbow_contracts"
version = "0.1.0"
edition = "2021"

[lib]
name = "rainbow_contracts"
path = "src/lib.rs"

[[bin]]
name = "rainbow_contracts"
path = "src/main.rs"

[dependencies]
rainbow_common = { version = "0.1.0", path = "../rainbow-common", default-features = false }
rainbow_db = { version = "0.1.0", path = "../rainbow-db", default-features = false }
rainbow_events = { version = "0.1.0", path = "../rainbow-events", default-features = false }

serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
dotenvy = { workspace = true }
reqwest = { workspace = true }
once_cell = { workspace = true }
thiserror = { workspace = true }
jsonschema = { workspace = true }
chrono = { workspace = true }
ulid = { workspace = true }
uuid = { workspace = true }
urn = { workspace = true }
log = { workspace = true }
tower = { workspace = true }
http-body-util = { workspace = true }
tracing-test = { workspace = true }
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
json_to_table = { workspace = true }
mockall = { workspace = true }

