[package]
name = "rainbow_core"
version = "0.3.1"
edition = "2021"

[lib]
name = "rainbow_core"
path = "src/lib.rs"

[[bin]]
name = "rainbow_core"
path = "src/main.rs"

[dependencies]
rainbow_common = { version = "0.3.8", path = "../rainbow-common", default-features = false }
rainbow_dataplane = { version = "0.3.8", path = "../rainbow-dataplane", default-features = false }
rainbow_db = { version = "0.3.8", path = "../rainbow-db", default-features = false }
rainbow_auth = { version = "0.3.8", path = "../rainbow-auth", default-features = false }
rainbow_events = { version = "0.3.1", path = "../rainbow-events", default-features = false }
rainbow_transfer_agent = { version = "0.3.8", path = "../rainbow-transfer-agent", default-features = false }
rainbow_catalog_agent = { version = "0.3.8", path = "../rainbow-catalog-agent", default-features = false }


clap = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
json_to_table = {workspace = true}
serde_json = {workspace = true}
uuid = "1.18.1"
tower-http = { version = "0.6.6", features = ["trace"] }

