[package]
name = "rainbow_datahub_catalog"
version = "0.3.1"
edition = "2021"

[lib]
name = "rainbow_datahub_catalog"
path = "src/lib.rs"

[[bin]]
name = "rainbow_datahub_catalog"
path = "src/main.rs"

[dependencies]
rainbow_common = { version = "0.3.1", path = "../rainbow-common", default-features = true }
rainbow_db = { version = "0.3.1", path = "../rainbow-db", default-features = true }
rainbow_events = { version = "0.3.1", path = "../rainbow-events", default-features = true }
rainbow_catalog = { version = "0.3.1", path = "../rainbow-catalog", default-features = true }


serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
urn = { workspace = true }
log = { workspace = true }
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
mockall = { workspace = true }
once_cell = { workspace = true }
