[package]
name = "rainbow_dataplane"
version = "0.1.0"
edition = "2021"

[lib]
name = "rainbow_dataplane"
path = "src/lib.rs"

[[bin]]
name = "rainbow_dataplane"
path = "src/main.rs"

[dependencies]
rainbow_common = { version = "0.1.0", path = "../rainbow-common", default-features = true }
rainbow_catalog = { version = "0.1.0", path = "../rainbow-catalog", default-features = true }
rainbow_db = { version = "0.1.0", path = "../rainbow-db", default-features = true }

serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
dotenvy = { workspace = true }
reqwest = { workspace = true }
once_cell = { workspace = true }
thiserror = { workspace = true }
jsonschema = { workspace = true }
chrono = { workspace = true }
ulid = { workspace = true }
uuid = { workspace = true }
log = { workspace = true }
tower = { workspace = true }
http-body-util = { workspace = true }
tracing-test = { workspace = true }
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
utoipa-swagger-ui = { workspace = true }
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
hyper = { version = "1.5.0", features = ["full"] }
