[package]
name = "rainbow_dataplane"
version = "0.3.1"
edition = "2021"

[lib]
name = "rainbow_dataplane"
path = "src/lib.rs"

[[bin]]
name = "rainbow_dataplane"
path = "src/main.rs"

[dependencies]
rainbow_common = { version = "0.3.1", path = "../rainbow-common", default-features = true }
rainbow_db = { version = "0.3.1", path = "../rainbow-db", default-features = true }

serde = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
urn = { workspace = true }
hyper = { version = "1.5.0", features = ["full"] }
