[package]
name = "rainbow_dataplane"
version = "0.3.8"
edition = "2021"

[lib]
name = "rainbow_dataplane"
path = "src/lib.rs"


[dependencies]
rainbow_common = { version = "0.3.1", path = "../rainbow-common", default-features = true }

serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
urn = { workspace = true }
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
hyper = { version = "1.5.0", features = ["full"] }
async-trait = {workspace = true}
uuid = "1.18.1"
ymir = {workspace = true}
