[package]
name = "rainbow_db"
version = "0.1.0"
edition = "2021"

[lib]
name = "rainbow_db"
path = "src/lib.rs"

#[[bin]]
#name = "rainbow_db"
#path = "src/main.rs"

[dependencies]
rainbow_common = { version = "0.1.0", path = "../rainbow-common", default-features = false }

serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
dotenvy = { workspace = true }
once_cell = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
urn = { workspace = true }
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
