[package]
name = "rainbow_db"
version = "0.3.1"
edition = "2021"

[lib]
name = "rainbow_db"
path = "src/lib.rs"

#[[bin]]
#name = "rainbow_db"
#path = "src/lib"

[dependencies]
rainbow_common = { version = "0.3.1", path = "../rainbow-common", default-features = false }


serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
urn = { workspace = true }
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
json_value_merge = "2.0.1"
rand = "0.8.5"
url = "2.5.4"
sha2 = "0.10.9"
base64 = "0.22.1"
