[package]
name = "rainbow_events"
version = "0.3.8"
edition = "2021"


[lib]
name = "rainbow_events"
path = "src/lib.rs"


[dependencies]
rainbow_common = { version = "0.3.8", path = "../rainbow-common", default-features = false }

serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
urn = { workspace = true }
log = { workspace = true }
mockall = { workspace = true }
sea-orm = {workspace = true}
sea-orm-migration = {workspace = true}
async-trait = {workspace = true}
