[package]
name = "rainbow_fe_gateway"
version = "0.3.1"
edition = "2021"

[lib]
name = "rainbow_fe_gateway"
path = "src/lib.rs"

[[bin]]
name = "rainbow_fe_gateway"
path = "src/main.rs"

[dependencies]
rainbow_common = { version = "0.3.1", path = "../rainbow-common", default-features = false }

serde_json = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
futures-util = "0.3.31"
http-body-util = "0.1.2"
bytes = "1.9.0"
http-body = "1.0.1"
tower-http = { workspace = true }
log = "0.4.27"
fs_extra = { version = "1.3.0" }
