[package]
name = "rainbow_fe_gateway"
version = "0.3.8"
edition = "2021"

[lib]
name = "rainbow_fe_gateway"
path = "src/lib.rs"

[[bin]]
name = "rainbow_fe_gateway"
path = "src/main.rs"

[dependencies]
rainbow_common = { version = "0.3.8", path = "../rainbow-common", default-features = false }

serde_json = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
futures-util = "0.3.31"
http-body-util = "0.1.2"
bytes = "1.9.0"
http-body = "1.0.1"
tower-http = { workspace = true }
fs_extra = { version = "1.3.0" }
mime_guess = "2.0"
rust-embed = "8.3"
ymir = {workspace = true}
tokio-util = "0.7.17"
uuid = { version = "1.18.1", features = ["v4"] }
async-trait = "0.1.89"
json_to_table = {workspace = true}