[package]
name = "rainbow_mates"
version = "0.3.1"
edition = "2021"

[lib]
name = "rainbow_mates"
path = "src/lib.rs"

[dependencies]
rainbow_common = { version = "0.3.1", path = "../rainbow-common", default-features = true }
rainbow_db = { version = "0.3.1", path = "../rainbow-db", default-features = true }

serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
sea-orm = { workspace = true }
